--- a/index1.html
+++ b/index1.html
@@ -3,10 +3,12 @@
 <head>
 	<meta charset="UTF-8">
 	<link href="https://fonts.googleapis.com/css?family=Rubik+Mono+One&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Merriweather+Sans&display=swap" rel="stylesheet">
 	<title>TestScroll</title>
 </head>
 <body>
 	<div class="text">0</div>
+	<div class="light"></div>
 	<div class="dub">
 		<div class="block sc_1"></div>
 		<div class="block sc_2"></div>
@@ -21,12 +23,30 @@
 		<div class="block sc_11"></div>
 		<div class="block sc_12"></div>
 		<div class="block sc_13"></div>
+		<div class="block sc_14"></div>
+		<div class="block sc_15"></div>
 	</div>
 	<style>
 		body, 
 		html {
 			margin: 0;
 			padding: 0;
+		}
+
+		html {
+			overflow-x: hidden;
+		}
+
+		.light {
+			position: fixed;
+			transition: 1s;
+			width: 100%;
+			height: 420px;
+			top: 100px;
+		}
+
+		.go {
+			background: rgba(0,0,255,0.5);
 		}
 
 		.dub {
@@ -54,6 +74,13 @@
 			border: 2px solid black;
 			font-size: 50px;
 			background: grey;
+		}
+
+		@keyframes sd{
+
+			50% {
+				box-shadow: 0px 0px 10px 5px red;
+			}
 		}
 
 		.sc_1 {
@@ -141,56 +168,93 @@
 		}
 
 		.sc_13 {
-			width: 100px;
-			height: 50px;
+			width: 1450px;
+			height: 10px;
 			top: 7000px;
-            left: 750px;
+            left: 1500px;
+            background: black;
+		}
+
+		.sc_14 {
+			width: 1450px;
+			height: 10px;
+			top: 6500px;
+            left: 1500px;
+            background: black;
+		}
+
+		.sc_15 {
+			width: 1px;
+			height: 1px;
+			top: 9500px;
+            border: 0px solid black;
 		}
 
 	</style>
 	<script>
-		let sc_1 = document.querySelector('.sc_1');
-		let sc_3 = document.querySelector('.sc_3');
-		let sc_2 = document.querySelector('.sc_2');
-		let sc_4 = document.querySelector('.sc_4');
-		let sc_5 = document.querySelector('.sc_5');
-		let sc_6 = document.querySelector('.sc_6');
-		let sc_7 = document.querySelector('.sc_7');
-		let sc_8 = document.querySelector('.sc_8');
-		let sc_9 = document.querySelector('.sc_9');
-		let sc_10 = document.querySelector('.sc_10');
-		let sc_11 = document.querySelector('.sc_11');
-		let sc_12 = document.querySelector('.sc_12');
+		let light = document.querySelector('.light');
 
         window.onscroll = function () {
         	let scrollNow = document.documentElement.scrollTop;
 			let tablo = document.querySelector('.text');
         	tablo.innerHTML = scrollNow;
-			stopElement (sc_1, 660, 120);
-			stopElement (sc_3, 1327, 272);
-			stopElement (sc_2, 1660, 120);
-			stopElement (sc_4, 2160, 272);
-			stopElement (sc_5, 2880, 120);
-			stopElement (sc_6, 3380, 120);
-			stopElement (sc_7, 3880, 120);
-			stopElement (sc_8, 4380, 120);
-			stopElement (sc_9, 4880, 120);
-			stopElement (sc_10, 5070, 450);
-			stopElement (sc_11, 5828, 172);
-			stopElement (sc_12, 6370, 120);
+        	if(scrollNow >= 8390){
+ 				light.classList.add("go");
+        	}else{
+        		light.classList.remove("go");
+        	}
+			// stopElement ('.sc_1', 660, 120, false, 0);
+			// stopElement ('.sc_3', 1327, 272, false, 0);
+			// stopElement ('.sc_2', 1660, 120, false, 0);
+			// stopElement ('.sc_4', 2160, 272, false, 0);
+			// stopElement ('.sc_5', 2880, 120, false, 0);
+			// stopElement ('.sc_6', 3380, 120, false, 0);
+			// stopElement ('.sc_7', 3880, 120, false, 0);
+			// stopElement ('.sc_8', 4380, 120, false, 0);
+			// stopElement ('.sc_9', 4880, 120, false, 0);
+			// stopElement ('.sc_10', 5070, 450, false, 0);
+			// stopElement ('.sc_11', 5828, 172, false, 0);
+			// stopElement ('.sc_12', 6370, 120, false, 0);
+			// stopElement ('.sc_13', 6578, 520, true, 8020);
+			// stopElement ('.sc_14', 3200, 90, true, 4650);
+            
+             const optionElement = {
+		        	nameObj: ['.sc_1','.sc_3','.sc_2','.sc_4','.sc_5','.sc_6','.sc_7','.sc_8','.sc_9','.sc_10','.sc_11','.sc_12','.sc_13','.sc_14',],
+		        	stopTop: [660, 1327, 1660, 2160, 2880, 3380, 3880, 4380, 4880, 5070, 5828, 6370, 6578, 3200],
+		        	marTop: [120, 272,120,272,120,120,120,120,120, 450, 172, 120, 520, 90],
+		        	addAnimation: [false, false, false, false, false, false, false, false, false, false, false, false, true, true],
+		        	stopLeft: [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 8020, 4650]
+		        }
+             
+
+                for (var i = 0; i < optionElement.stopTop.length; i++) {
+                	stopElement(optionElement.nameObj[i], optionElement.stopTop[i], optionElement.marTop[i], optionElement.addAnimation[i], optionElement.stopLeft[i],)
+                }
         }
 
-		function stopElement (element, stopPositionScroll, marginTop) {
-			let scrollNow = document.documentElement.scrollTop;
-			let position = getComputedStyle(element);
 
-             if(scrollNow >= stopPositionScroll) {
-				element.style.top = marginTop + scrollNow + "px";
+		function stopElement (element, stopPositionScrollTop, marginTop, LeftAnimation, stopPositionScrollLeft) {
+			let object = document.querySelector(element);
+			let scrollNow = document.documentElement.scrollTop;
+			let position = getComputedStyle(object);
+
+             if(scrollNow >= stopPositionScrollTop) {
+				object.style.top = marginTop + scrollNow + "px";
              }else{	
-				element.style.top = position.top + "px";
+				object.style.top = position.top + "px";
+             };
+
+             if(LeftAnimation && stopPositionScrollTop <= scrollNow) {
+             	let changePosition = stopPositionScrollTop - scrollNow;
+             	let change = 1500 + changePosition;
+             	if (scrollNow <= stopPositionScrollLeft) {
+             		object.style.left = change + "px";
+             	}else {
+             		object.style.left = "0px";
+             	}
+             	console.log(change);
              }
 		}
-
 
 
 
